Add the test page

--- a/PlottedAssist/Views/PlantSets/Details.cshtml
+++ b/PlottedAssist/Views/PlantSets/Details.cshtml
@@ -91,11 +91,11 @@
 
             <dd>
                 <P>
-                    @if (Model.PlantSoilSand == "1")
+                    @if (Model.PlantSunNeedPath == "1")
                     {<text>Full sun</text>}
-                    @if (Model.PlantSoilClay == "2")
+                    @if (Model.PlantSunNeedPath == "2")
                     {<text>Full shade</text>}
-                    @if (Model.PlantSoilLoom == "3")
+                    @if (Model.PlantSunNeedPath == "3")
                     {<text>Half sun</text>}
                 </P>
             </dd>
