--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -32,23 +32,23 @@
     </div>
 
     <!--Question part-->>
-    <form role="form" class="col-sm-6 col-sm-offset-3 white-word" style="font-family:'Arial';background:#1E2621;margin-top:20px;position:relative">
+    <form role="form" action="/PlantSets/TestResult" method="post" class="col-sm-6 col-sm-offset-3 white-word" style="font-family:'Arial';background:#1E2621;margin-top:20px;position:relative">
         <br>
         <br>
         <div class="col-sm-12 white-word form-group">
             <p style="font-size:16px;">1. What type plants do you want to pant?</p>
             <div class="checkbox">
                 <label>
-                    <input type="checkbox">Tree
+                    <input type="checkbox" name="Tree" value="Trees" checked="checked">Tree
                 </label>
                 <label>
-                    <input type="checkbox">Shrub
+                    <input type="checkbox" name="Shrub" value="Shrubs" checked="checked">Shrub
                 </label>
                 <label>
-                    <input type="checkbox">Crepper
+                    <input type="checkbox" name="Crepper" value="Creepers" checked="checked">Crepper
                 </label>
                 <label>
-                    <input type="checkbox">Grass
+                    <input type="checkbox" name="Grass" value="Small Plants" checked="checked">Grass
                 </label>
             </div>
         </div>
@@ -57,16 +57,16 @@
             <p style="font-size:16px;">2. How often would you like to water your plants?</p>
             <div class="radio">
                 <label>
-                    <input type="radio">Often
+                    <input type="radio" name="PlantWaterFrq" value="2">Often
                 </label><br>
                 <label>
-                    <input type="radio">Medium
+                    <input type="radio" name="PlantWaterFrq" value="4">Medium
                 </label><br>
                 <label>
-                    <input type="radio">I don't have time
+                    <input type="radio" name="PlantWaterFrq" value="6">I don't have time
                 </label><br>
                 <label>
-                    <input type="radio">All good for me
+                    <input type="radio" name="PlantWaterFrq" value="All">All good for me
                 </label>
             </div>
         </div>
@@ -75,16 +75,16 @@
             <p style="font-size:16px;">3. When do you plan to plants?</p>
             <div class="radio">
                 <label>
-                    <input type="radio">Spring
+                    <input type="radio" name="PlantSeason" value="Spring">Spring
                 </label><br>
                 <label>
-                    <input type="radio">Summer
+                    <input type="radio" name="PlantSeason" value="Summer">Summer
                 </label><br>
                 <label>
-                    <input type="radio">Autumn
+                    <input type="radio" name="PlantSeason" value="Autumn">Autumn
                 </label><br>
                 <label>
-                    <input type="radio">Winter
+                    <input type="radio" name="PlantSeason" value="Winter">Winter
                 </label>
             </div>
         </div>
@@ -93,10 +93,13 @@
             <p style="font-size:16px;">4. Enough sunshine in your garden?</p>
             <div class="radio">
                 <label>
-                    <input type="radio">Yes
+                    <input type="radio" name="PlantSunNeedPath" value="1">Yes
                 </label><br>
                 <label>
-                    <input type="radio">No
+                    <input type="radio" name="PlantSunNeedPath" value="3">Sometimes
+                </label><br>
+                <label>
+                    <input type="radio" name="PlantSunNeedPath" value="2">No
                 </label>
             </div>
         </div>
@@ -105,18 +108,18 @@
             <p style="font-size:16px">5. Do you prefer drought tolerant plants?</p>
             <div class="radio">
                 <label>
-                    <input type="radio">Yes
+                    <input type="radio" name="PlantDroughtTol" value="1">Yes
+                </label><br>          
+                <label>
+                    <input type="radio" name="PlantDroughtTol" value="0">No
                 </label><br>
                 <label>
-                    <input type="radio">No
-                </label><br>
-                <label>
-                    <input type="radio">I don't care
+                    <input type="radio" name="PlantDroughtTol" value="All">I don't care
                 </label>
             </div>
         </div>
 
-        <div class="col-sm-12 white-word" style="position:relative;margin-top:20px;margin-bottom:40px;text-align:center">
+        <div class="col-sm-12 white-word form-group" style="position:relative;margin-top:20px;margin-bottom:40px;text-align:center">
             <button type="submit" style="color:white; text-align: center;box-shadow:0px 0px 8px 5px #1E2621;background-color:transparent;">Submit</button>
         </div>
     </form>
