--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -2,15 +2,20 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="row" style="background-color:#344239;">
+<div class="row" style="background-color:#4F6657;">
 
     <!--Header-->
     <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;">
         <div class="col-sm-12 white-word" style="position:relative;margin-top:300px;text-align:center">
-            <button type="submit" style="color:white; text-align: center;box-shadow:0px 0px 8px 5px #1E2621;background-color:transparent;">See Plants →</button>
+            <button type="submit" style="color:white; text-align: center;box-shadow:2px 2px 6px 2px #1E2621;background-color:transparent;">See Plants →</button>
         </div>
     </div>
 
     <!--body-->
+    <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-7" style="border:0px;">
+            <img src="~/Picture/Icon/InvasivePlants.png" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;margin:0px">
 
+        </div>
+    </div>
 </div>
