--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -12,7 +12,7 @@
 
 
 
-<div class="row" style="background-color:#344239">
+<div class="row" style="background-color:#4F6657">
     <!--Header-->
 
     <div class="col-12 col-md-12" style="padding:0;background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;margin:0;position:relative">
@@ -24,7 +24,7 @@
         </div>
     </div>
     <!--Top part-->>
-    <div class="col-sm-6 col-sm-offset-3 white-word" style="background:#1E2621;text-align:center;margin-top:100px;position:relative">
+    <div class="col-sm-6 col-sm-offset-3 white-word" style="background:#344239;text-align:center;margin-top:100px;position:relative">
         <H3>Let us help you decide which to plant!</H3>
         <p>
             @Html.ActionLink("No thanks.Give me the list of all plants", "PlantList")
@@ -32,7 +32,7 @@
     </div>
 
     <!--Question part-->>
-    <form role="form" action="/PlantSets/TestResult" method="post" class="col-sm-6 col-sm-offset-3 white-word" style="font-family:'Arial';background:#1E2621;margin-top:20px;position:relative">
+    <form role="form" action="/PlantSets/TestResult" method="post" class="col-sm-6 col-sm-offset-3 white-word" style="font-family:'Arial';background:#344239;margin-top:20px;position:relative;margin-bottom:50px">
         <br>
         <br>
         <div class="col-sm-12 white-word form-group">
@@ -120,7 +120,7 @@
         </div>
 
         <div class="col-sm-12 white-word form-group" style="position:relative;margin-top:20px;margin-bottom:40px;text-align:center">
-            <button type="submit" style="color:white; text-align: center;box-shadow:0px 0px 8px 5px #1E2621;background-color:transparent;">Submit</button>
+            <button type="submit" style="color:white; text-align: center;box-shadow:2px 2px 6px 2px #1E2621;background-color:transparent;">Submit</button>
         </div>
     </form>
 </div>
