--- a/PlottedAssist/Views/PlantSets/PlantList.cshtml
+++ b/PlottedAssist/Views/PlantSets/PlantList.cshtml
@@ -9,7 +9,7 @@
     };
 }
 
-<div class="row" style="background-color:#344239">
+<div class="row" style="background-color:#4F6657">
 
     <!--Header-->
 
