--- a/PlottedAssist/Views/WeedSets/Index.cshtml
+++ b/PlottedAssist/Views/WeedSets/Index.cshtml
@@ -10,7 +10,7 @@
 }
 
 
-    <div class="row" style="background-color:#344239;">
+    <div class="row" style="background-color:#4F6657;">
 
         <!--Header-->
         <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;">
@@ -57,7 +57,7 @@
 
             <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="padding-left:60px">
                 <div class="card" style="padding:15px;width:200px;margin-top:20px;border-radius:15px;">
-                    <a href="@Url.Content("~/WeedSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;padding:0px;">
+                    <a href="@Url.Content("~/WeedSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;box-shadow:2px 2px 6px 2px #1E2621;padding:0px;">
                         <img src="@Url.Content("~/Picture/Weed/"+item.WeedPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;">
                     </a>
                 </div>
