--- a/PlottedAssist/Views/Dashboard/Index.cshtml
+++ b/PlottedAssist/Views/Dashboard/Index.cshtml
@@ -4,18 +4,18 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-    <div class="row" style="background-color:#4F6657;">
+    <div class="row" style="background-color:#4F6657;margin-top:20px">
         <!--Header-->
 
         <div class="col-12 col-md-12" style="padding:0;background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;margin:0;position:relative">
 
         </div>
-        <!--Add new one button-->>
-        <div class="white-word" style="position:relative;margin-top:50px;margin-left:80%">
-            <button type="submit" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;border:0px">@Html.ActionLink("Go to add one", "../PlantSets/PlantList")</button>
-        </div>
+            <!--Add new one button-->
+            <div class="white-word" style="position:relative;margin-top:50px;margin-left:80%">
+                <button type="submit" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;border:0px">@Html.ActionLink("Go to add one", "../PlantSets/PlantList")</button>
+            </div>
         
-        <!--Activity part-->>
+        <!--Activity part-->
         <div class="col-md-8 col-md-offset-2">
 
 
@@ -41,11 +41,11 @@
                 </div>
             </div>
 
-            <!--My plant-->>
+            <!--My plant-->
             @foreach (var item in Model)
             {
                 <div class="col-md-7" style="border-radius:5px;">
-                    <div class="col-xs-12" style="padding:20px;border:thin;background:#6D917A;border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;margin-bottom:40px">
+                    <div class="col-xs-12" style="padding:20px;border:thin;background:#1E2621;border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;margin-bottom:40px">
                         <div class="col-sm-3" style="background:black;border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;">
                             <img>
                         </div>
