--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -2,20 +2,65 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="row" style="background-color:#4F6657;">
+    <div class="row" style="background-color:#4F6657;">
 
-    <!--Header-->
-    <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;">
-        <div class="col-sm-12 white-word" style="position:relative;margin-top:300px;text-align:center">
-            <button type="submit" style="color:white; text-align: center;box-shadow:2px 2px 6px 2px #1E2621;background-color:transparent;">See Plants →</button>
+        <!--Header-->
+        <div class="col-12 col-md-8" style="background-image:url(../Picture/homepage_header.jpg);width:100%;height:800px;position:relative;">
+            <div class="col-sm-12 white-word" style="position:relative;margin-top:500px;text-align:center">
+                <button type="submit" style="color:white; text-align: center;box-shadow:2px 2px 6px 2px #1E2621;background-color:transparent;">See Plants →</button>
+            </div>
+        </div>
+
+        <!--body-->
+
+        <div class="col-md-8 col-md-offset-2">
+
+            <!--Guidance-->
+            <div class="col-md-4" style="border:0px;margin-top:50px;position:relative;margin-bottom:100px">
+                <div class="white-word" style="background:#344239;text-align:center;border:0px;border-radius:10px;">
+                    <br>
+                    <img src="~/Picture/Icon/InvasivePlants.png" style="width:100%;height:250px;">
+                    <br>
+                    <br>
+                    <h3>Invasive Plants</h3>
+                    <h3>GUIDANCE...</h3>
+                    <br>
+                    <br>
+                </div>
+            </div>
+
+            <div class="col-md-4" style="border:0px;margin-top:50px;position:relative;margin-bottom:100px">
+                <div class="white-word" style="background:#344239;text-align:center;border:0px;border-radius:10px">
+                    <br>
+                    <img src="~/Picture/Icon/PlantList.png" style="width:100%;height:250px;">
+                    <br>
+                    <br>
+                    <h3>Plant List</h3>
+                    <h3>GUIDANCE...</h3>
+                    <br>
+                    <br>
+                </div>
+            </div>
+
+            <div class="col-md-4" style="border: 0px;margin-top:50px;position:relative;margin-bottom:100px">
+                <div class="white-word" style="background:#344239;text-align:center;border:0px;border-radius:10px">
+                    <br>
+                    <img src="~/Picture/Icon/MyGarden.png" style="width:100%;height:250px;">
+                    <br>
+                    <br>
+                    <h3>My Garden</h3>
+                    <h3>GUIDANCE...</h3>
+                    <br>
+                    <br>
+                </div>
+            </div>
+
+            <!--Most popular plant-->
+            <div class="col-md-12 white-word" style="text-align:center">
+                <h4>Most popular plants</h4>
+                <br>
+                <br>
+
+            </div>
         </div>
     </div>
-
-    <!--body-->
-    <div class="col-md-8 col-md-offset-2">
-        <div class="col-md-7" style="border:0px;">
-            <img src="~/Picture/Icon/InvasivePlants.png" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;margin:0px">
-
-        </div>
-    </div>
-</div>
