--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -15,7 +15,7 @@
 <div class="row" style="background-color:#4F6657">
     <!--Header-->
 
-    <div class="col-12 col-md-12" style="padding:0;background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;margin:0;position:relative">
+    <div class="col-12 col-md-12" style="padding:0;background-image:url(../Picture/header_picture3.jpg);width:100%;height:400px;margin:0;position:relative">
         <div style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
             <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Indigenous Plants</p>
         </div>
@@ -23,20 +23,19 @@
             <p style="font-family:'Arial';color:black;background:white;font-size:25px;text-align:center">in Yarra City</p>
         </div>
     </div>
-    <!--Top part-->>
-    <div class="col-sm-6 col-sm-offset-3 white-word" style="background:#344239;text-align:center;margin-top:100px;position:relative">
-        <H3>Let us help you decide which to plant!</H3>
-        <p>
-            @Html.ActionLink("No thanks.Give me the list of all plants", "PlantList")
-        </p>
-    </div>
 
-    <!--Question part-->>
+    <!--Question part-->
     <form role="form" action="/PlantSets/TestResult" method="post" class="col-sm-6 col-sm-offset-3 white-word" style="font-family:'Arial';background:#344239;margin-top:20px;position:relative;margin-bottom:50px">
+        <div class="white-word" style="background:#344239;text-align:center;margin-top:50px;position:relative">
+            <H3>Let us help you decide which to plant!</H3>
+            <p>
+                @Html.ActionLink("No thanks.Give me the list of all plants", "PlantList")
+            </p>
+        </div>
         <br>
         <br>
         <div class="col-sm-12 white-word form-group">
-            <p style="font-size:16px;">1. What type plants do you want to pant?</p>
+            <h1 style="font-size:16px;">1. What type plants do you want to pant? <a href="~/Picture/Tooltip.jpg"><img src="~/Picture/Icon/tooltip_icon.png" height="15"></a></h1>
             <div class="checkbox">
                 <label>
                     <input type="checkbox" name="Tree" value="Trees" checked="checked">Tree
