--- a/PlottedAssist/Views/PlantSets/PlantList.cshtml
+++ b/PlottedAssist/Views/PlantSets/PlantList.cshtml
@@ -13,7 +13,7 @@
 
     <!--Header-->
 
-    <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;padding:0">
+    <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture3.jpg);width:100%;height:400px;position:relative;padding:0">
         <div class="col-12 col-md-12" style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
             <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Indigenous Plants</p>
         </div>
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <!--Filter-->>
+    <!--Filter-->
     @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
     {
         <div style="text-align:center;margin-top:20px;position:relative">
