--- a/PlottedAssist/Views/WeedSets/Details.cshtml
+++ b/PlottedAssist/Views/WeedSets/Details.cshtml
@@ -9,7 +9,7 @@
 
     <!--Header-->
 
-    <div class="col-12 col-md-8" style="background-image:url(../../Picture/header_picture.jpg);width:100%;height:400px;position:relative;">
+    <div class="col-12 col-md-8" style="background-image:url(../../Picture/header_picture4.jpg);width:100%;height:400px;position:relative;">
         <div class="col-12 col-md-12" style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
             <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Indigenous Plants</p>
         </div>
@@ -17,7 +17,7 @@
             <p style="font-family:'Arial';color:black;background:#F5F5F5;font-size:25px;text-align:center">in Yarra City</p>
         </div>
     </div>
-    <!--weed information and picture-->>
+    <!--weed information and picture-->
     <p style="color:black;font-family:'Arial';font-size:16PX;padding-left:10%">< @Html.ActionLink("Back to List", "Index")</p>
     <div class="col-sm-6 col-sm-offset-3" style="margin-top:20px;position:relative">
         <img class="col-xs-12 col-lg-8 col-lg-offset-3" style="box-shadow:0px 0px 8px 5px #1E2621;padding:0px;margin-bottom:40px;position:relative" src="@Url.Content("~/Picture/Weed/"+Model.WeedPhotoPath)">
