--- a/PlottedAssist/Views/WeedSets/Index.cshtml
+++ b/PlottedAssist/Views/WeedSets/Index.cshtml
@@ -13,7 +13,7 @@
     <div class="row" style="background-color:#4F6657;">
 
         <!--Header-->
-        <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;">
+        <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture4.jpg);width:100%;height:400px;position:relative;">
             <div style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
                 <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Remove Weeds</p>
             </div>
@@ -22,13 +22,15 @@
             </div>
         </div>
 
-        <h1 class="white-word" style="text-align:center;font-family:'Arial';padding-top:10px;">Have you ever see these plant</h1>
+        
+        <h1 class="white-word" style="text-align:center;font-family:'Arial';margin-top:10px;">Have you ever see these plant</h1>
 
-        <!--Filter-->>
+        <!--Filter-->
         @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
         {
             <div style="text-align:center">
                 <div class="btn-group-lg" role="group" aria-label="Flower color">
+                    
                     <h4 class="white-word">Flower color</h4>
 
                     @Ajax.ActionLink("White", "WeedFilter", new { selected = "White" },
