--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Indigene", "Index", "PlantSets")</li>
+                    <li>@Html.ActionLink("Test", "Index", "PlantSets")</li>
+                    <li>@Html.ActionLink("Indigene", "PlantList", "PlantSets")</li>
                     <li>@Html.ActionLink("Invasion", "Index", "WeedSets")</li>
                     <li>@Html.ActionLink("My Plant", "Index", "Dashboard")</li>
                 </ul>
