--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="~/Home/index.html" style="padding-top:5px;"><img id="logo" src="~/Picture/logo.png" height="40"></a>           
+                <a class="navbar-brand" href="~/Home/Index" style="padding-top:10px;"><img id="logo" src="~/Picture/logo.png" height="30"></a>           
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
