--- a/PlottedAssist/Views/Dashboard/Index.cshtml
+++ b/PlottedAssist/Views/Dashboard/Index.cshtml
@@ -4,25 +4,27 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-    <div class="row" style="background-color:#4F6657;margin-top:20px">
+    <div class="row" style="background-color:#4F6657;">
         <!--Header-->
 
-        <div class="col-12 col-md-12" style="padding:0;background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;margin:0;position:relative">
-
+        <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture.jpg);width:100%;margin:0;padding-bottom:10%">
+            <div>
+                <img src="~/Picture/Banner/MyGardenTitle.png" style="width:35%;margin-top:15%;margin-left:33%">
+            </div>
         </div>
             <!--Add new one button-->
-            <div class="white-word" style="position:relative;margin-top:50px;margin-left:80%">
-                <button type="submit" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;border:0px">@Html.ActionLink("Go to add one", "../PlantSets/PlantList")</button>
+            <div class="white-word col-xs-4 col-md-2 col-lg-2 col-xs-offset-8 col-md-offset-10 col-lg-offset-10">
+                <button type="submit" style="background: #344239; color:white;padding:3%; text-align: center;border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-top:10%;">@Html.ActionLink("Go to add one", "../PlantSets/PlantList")</button>
             </div>
         
         <!--Activity part-->
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2" style="margin-top:5%">
 
 
-            <div class="col-md-4" style="border:0px;">
-                <div class="panel panel-primary white-word" style="background:#344239;text-align:center;border:0px;border-radius:10px">
+            <div class="col-md-3" style="border:0px;">
+                <div class="panel panel-primary white-word" style="background:#344239;border:0px;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;padding-left:10%;padding-right:10%">
                     <br>
-                    <h3 class="panel-title">Activity Today</h3>
+                    <h3 class="panel-title" style="text-align:center">Activity Today</h3>
                     <hr>
                     @if (ViewBag.today.Length == 1)
                     {<text>No Activity Today</text>;
@@ -31,23 +33,23 @@
                     {
                     for (int i = 0; i < ViewBag.today.Length-1; i = i + 2)
                     {
-                        <img src="@Url.Content("~/Picture/Icon/" + ViewBag.today[i+1])" height="30">
-                        <p>@ViewBag.today[i +2 ] </p>  
+                        <img src="@Url.Content("~/Picture/Icon/" + ViewBag.today[i+1])" height="30" width="30">
+                        @ViewBag.today[i +2 ] <br> <br>
                     }}
                 </div>
 
-                <div class="panel panel-primary white-word" style="background:#344239;text-align:center;border:0px;border-radius:10px">
+                <div class="panel panel-primary white-word" style="background:#344239;border:0px;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;padding-left:10%;padding-right:10%">
                     <br>
-                    <h3 class="panel-title">Activity Tomorrow</h3>
+                    <h3 class="panel-title" style="text-align:center">Activity Tomorrow</h3>
                     <hr>
                     @if (ViewBag.tomorrow.Length == 1)
-                    {<text>No Activity Tomorrow</text>}
+                    {<text>No Activity Tomorrow </text><br> }
                 else
                 {
                     for (int i = 0; i < ViewBag.tomorrow.Length-1; i = i + 2)
                     {
-                        <img src="@Url.Content("~/Picture/Icon/" + ViewBag.tomorrow[i+1])" height="30">
-                        <p>@ViewBag.tomorrow[i + 2] </p>
+                        <img src="@Url.Content("~/Picture/Icon/" + ViewBag.tomorrow[i+1])" height="30" width="30">
+                        @ViewBag.tomorrow[i + 2] <br> <br>
                     }}
                 </div>
             </div>
@@ -55,54 +57,45 @@
             <!--My plant-->
             @foreach (var item in Model)
             {
-                <div class="col-md-7" style="border-radius:5px;">
-                    <div class="col-xs-12" style="padding:20px;border:thin;background:#1E2621;border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;margin-bottom:40px">
-                        <div class="col-sm-3" style="background:black;border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;">
-                            <img src="@Url.Content("~/Picture/PlantSet/"+item.PlantSet.PlantPhotoPath)" height ="100"style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;margin:0px">
+                <div class="col-md-8 col-md-offset-1 col-xs-12" style="border-radius:5px;">
+                    <div class="row" style="padding: 20px; border: thin; background: #1E2621; border-radius: 5px; box-shadow: 2px 2px 6px 2px #1E2621; margin-bottom: 40px;">
+                        <div class="col-xs-12 col-md-5 col-lg-5 white-word" style="border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;text-align:center">
+                            <img src="@Url.Content("~/Picture/PlantSet/"+item.PlantSet.PlantPhotoPath)" style="border-radius:5px;box-shadow:0px 0px 8px 5px #1E2621;width:100%;height:100%;margin-left:-10%">                                              
                         </div>
-                        <div class="col-sm-3 white-word">
-                            @Html.DisplayFor(modelItem => item.plantNickName)
-                            <br><br>
-                            @Html.DisplayFor(modelItem => item.PlantSet.PlantCommonName)
-                            <br><br>
-                            @Html.DisplayFor(modelItem => item.PlantSet.PlantSciName)
-                            <br>
+                        <div class="col-xs-12 col-md-7 col-lg-7 white-word" style="margin-bottom:4%;font-size:18px;font-weight:bold">
+
+                            @Html.DisplayFor(modelItem => item.plantNickName)<br>
                         </div>
-
-                        <div style='width:1px;border:1px solid white;float:left;height:180px;'></div>
-
-                        <div class="col-sm-3 white-word" style="text-align:center">
-                            <img src="~/Picture/Icon/Water.png" height="30">
+                        <div class="col-xs-12 col-md-7 col-lg-7 white-word" style="margin-bottom: 2%;font-size:18px">
+                            <img src="~/Picture/Icon/Water.png" height="30" width="30">
                             @if (item.PlantWaterFrq == "0")
                             {<text>---</text>}
-                            else
-                            { @Html.DisplayFor(modelItem => item.PlantWaterFrq)} Days
-                            <br><br>
-                            <img src="~/Picture/Icon/Prune.png" height="30">
-                            @if (item.PlantPruningFrq == "0")
-                            {<text>---</text>}
-                            else
-                            { @Html.DisplayFor(modelItem => item.PlantPruningFrq)} Days
-                            <br><br>
-                            <img src="~/Picture/Icon/Fertilize.png" height="30">
-                            @if (item.PlantPruningFrq == "0")
-                            {<text>---</text>}
-                            else {@Html.DisplayFor(modelItem => item.PlantFertilizerFrq)} Days                      
-                            <br><br>
-                            <img src="~/Picture/Icon/Mist.png" height="30">
-                            @if (item.PlantPruningFrq == "0")
-                            {<text>---</text>}
-                            else {  @Html.DisplayFor(modelItem => item.PlantMistFrq)} Days
-                           
-                        </div>
+                        else
+                        { @Html.DisplayFor(modelItem => item.PlantWaterFrq)} days
 
-                        <div style='width:1px;border:1px solid white;float:left;height:180px;'></div>
+                            <img src="~/Picture/Icon/Prune.png" height="30" width="30">
+                            @if (item.PlantPruningFrq == "0")
+                            {<text>---</text>}
+                        else
+                        { @Html.DisplayFor(modelItem => item.PlantPruningFrq)} days
+                            <br><br>
+                            <img src="~/Picture/Icon/Fertilize.png" height="30" width="30">
+                            @if (item.PlantPruningFrq == "0")
+                            {<text>---</text>}
+                        else
+                        {@Html.DisplayFor(modelItem => item.PlantFertilizerFrq)} days
 
-                        <div class="col-sm-2 white-word" style="text-align:center">
-                            <br><a href="@Url.Content("../PlantSets/Details/"+ item.PlantSet.Id)" class="btn btn-primary btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;font-size:16px;width:100px">Information</a><br>
-                            <br><a href="@Url.Content("~/Dashboard/Edit/"+ item.Id)" class="btn btn-primary btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;width:100px"> Setting</a><br>
-                            <br><a href="@Url.Content("~/Dashboard/Delete/"+ item.Id)" class="btn btn-primary btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;width:100px"> Remove</a>
+                            <img src="~/Picture/Icon/Mist.png" height="30" width="30">
+                            @if (item.PlantPruningFrq == "0")
+                            {<text>---</text>}
+                        else
+                        { @Html.DisplayFor(modelItem => item.PlantMistFrq)} days
                         </div>
+                        <div class="col-xs-12 col-md-7 col-lg-7">
+                            <br><a href="@Url.Content("../PlantSets/Details/"+ item.PlantSet.Id)" class="btn btn-primary btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;font-size:10px;width:30%">Information</a>
+                            <a href="@Url.Content("~/Dashboard/Edit/"+ item.Id)" class="btn btn-primary btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;width:30%;font-size:10px"> Setting</a>
+                            <a href="@Url.Content("~/Dashboard/Delete/"+ item.Id)" class="btn btn-primary btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;width:30%;font-size:10px"> Remove</a>
+                        </div>                                               
                     </div>
              </div>
              }
