--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -5,62 +5,74 @@
     <div class="row" style="background-color:#4F6657;">
 
         <!--Header-->
-        <div class="col-12 col-md-8" style="background-image:url(../Picture/homepage_header.jpg);width:100%;height:800px;position:relative;">
-            <div class="col-sm-12 white-word" style="position:relative;margin-top:500px;text-align:center">
-                <button type="submit" style="color:white; text-align: center;box-shadow:2px 2px 6px 2px #1E2621;background-color:transparent;">See Plants →</button>
+        <div class="col-12 col-md-12 col-xs-8" style="padding:0;background-image:url(../Picture/header_picture5.jpg);width:100%;margin:0;padding-bottom:10%">
+            <div class="col-lg-4 col-lg-offset-4 col-xs-4 col-xs-offset-4 white-word"  style="text-align:center;font-family:'High Tower Text';border-radius:5px;background-color:#000000;opacity:0.5;margin-top:20%">
+                <h3 style="font-size:28px">We Help Your Garden Grow.</h3><br>
+                <p style="font-size:18px">We are a non-profit organization spreading awareness of planting and caring for indigenous plants in your garden.<p>
             </div>
         </div>
 
         <!--body-->
 
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-10 col-md-offset-1 col-xs-12">
 
             <!--Guidance-->
-            <div class="col-md-4" style="border:0px;margin-top:50px;position:relative;margin-bottom:100px">
-                <div class="white-word" style="background:#344239;text-align:center;border:0px;border-radius:10px;">
+            <div class="col-md-3 col-md-offset-1" style="border: 0px; margin-top: 10%; ; margin-bottom: 100px ">
+                <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px;">
                     <br>
-                    <img src="~/Picture/Icon/InvasivePlants.png" style="width:100%;height:250px;">
-                    <br>
-                    <br>
-                    <h3>Invasive Plants</h3>
-                    <h3>GUIDANCE...</h3>
+                    <div style="text-align:center">
+                    <img src="~/Picture/Icon/InvasivePlants.png" style="width:60%;height:50%">
+                    </div>
                     <br>
                     <br>
+                    
+                    <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center">Invasive Plants</h3>
+                    <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Look out for invasive plants in your garden. Protect your garden from them. Learn control and disposal techniques for invasive plants. See alternative indigenous plants.</h3>
+                    <br> 
+                    <div style="text-align:center">
+                        <button type="button" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:10%;width:100px;height:30px">@Html.ActionLink("Learn more", "../WeedSets/Index")</button>                   
+                    </div>
                 </div>
             </div>
 
-            <div class="col-md-4" style="border:0px;margin-top:50px;position:relative;margin-bottom:100px">
-                <div class="white-word" style="background:#344239;text-align:center;border:0px;border-radius:10px">
+            <div class="col-md-3 col-md-offset-1" style="border:0px;margin-top:10%;position:relative;margin-bottom:100px;">
+                <div class="white-word" style="        background: #1E2621;
+        
+        border: 0px;
+        border-radius: 10px
+">
                     <br>
-                    <img src="~/Picture/Icon/PlantList.png" style="width:100%;height:250px;">
+                    <div style="text-align:center">
+                        <img src="~/Picture/Icon/PlantList.png" style="width:60%;height:50%">
+                    </div>
                     <br>
                     <br>
-                    <h3>Plant List</h3>
-                    <h3>GUIDANCE...</h3>
+                    <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center">Plant List</h3>
+                    <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
                     <br>
-                    <br>
+                    <div style="text-align:center">
+                        <button type="button" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:6%;width:100px;height:30px;">@Html.ActionLink("Learn more", "../PlantSets/Index") </button>
+                    </div>
                 </div>
             </div>
 
-            <div class="col-md-4" style="border: 0px;margin-top:50px;position:relative;margin-bottom:100px">
-                <div class="white-word" style="background:#344239;text-align:center;border:0px;border-radius:10px">
+            <div class="col-md-3 col-md-offset-1" style="border: 0px;margin-top:10%;position:relative;margin-bottom:100px;">
+                <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px">
                     <br>
-                    <img src="~/Picture/Icon/MyGarden.png" style="width:100%;height:250px;">
-                    <br>
-                    <br>
-                    <h3>My Garden</h3>
-                    <h3>GUIDANCE...</h3>
+                    <div style="text-align:center">
+                        <img src="~/Picture/Icon/MyGarden.png" style="width:60%;height:50%">
+                    </div>
                     <br>
                     <br>
+                    
+                    
+                    <h3 style="font-size:18px;padding-left:10%;padding-right:10%;text-align:center">My Garden</h3>
+                    <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
+                    <br>
+                    <div style="text-align:center">
+                        <button type="button" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:7%;width:100px;height:30px">@Html.ActionLink("Learn more", "../Dashboard/Index") </button>
+                    </div>
                 </div>
-            </div>
-
-            <!--Most popular plant-->
-            <div class="col-md-12 white-word" style="text-align:center">
-                <h4>Most popular plants</h4>
-                <br>
-                <br>
-
             </div>
         </div>
     </div>
