--- a/PlottedAssist/Views/PlantSets/Instrction.cshtml
+++ b/PlottedAssist/Views/PlantSets/Instrction.cshtml
@@ -12,18 +12,9 @@
 
 
 
-<div class="row" style="background-color:#4F6657">
-    <!--Header-->
-
-    <div class="col-12 col-md-12" style="padding:0;background-image:url(../Picture/header_picture3.jpg);width:100%;height:400px;margin:0;position:relative">
-        <div style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
-            <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Indigenous Plants</p>
-        </div>
-        <div style="position:absolute;text-align:center;height:auto;width:auto;padding-top:255px;padding-left:50%;padding-right:33%;">
-            <p style="font-family:'Arial';color:black;background:white;font-size:25px;text-align:center">in Yarra City</p>
-        </div>
+<div style="background-image:url(../../Picture/Tooltip.jpg);padding-bottom:50%;">    
+    <div>
+        <p style="font-size:18px;padding-top:5%">< @Html.ActionLink("Back to Questionnaire", "Index")</p>
     </div>
-
-    
 </div>
 
