--- a/PlottedAssist/Views/WeedSets/Details.cshtml
+++ b/PlottedAssist/Views/WeedSets/Details.cshtml
@@ -9,19 +9,16 @@
 
     <!--Header-->
 
-    <div class="col-12 col-md-8" style="background-image:url(../../Picture/header_picture4.jpg);width:100%;height:400px;position:relative;">
-        <div class="col-12 col-md-12" style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
-            <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Indigenous Plants</p>
-        </div>
-        <div class="col-12 col-md-12" style="position:absolute;text-align:center;height:auto;width:auto;padding-top:255px;padding-left:50%;padding-right:33%;">
-            <p style="font-family:'Arial';color:black;background:#F5F5F5;font-size:25px;text-align:center">in Yarra City</p>
+    <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture4.jpg);width:100%;margin:0;padding-bottom:10%">
+        <div>
+            <img src="~/Picture/Banner/InvTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
         </div>
     </div>
     <!--weed information and picture-->
     <p style="color:black;font-family:'Arial';font-size:16PX;padding-left:10%">< @Html.ActionLink("Back to List", "Index")</p>
-    <div class="col-sm-6 col-sm-offset-3" style="margin-top:20px;position:relative">
+    <div class="col-xs-8 col-sm-6 col-sm-offset-3 col-xs-offset-2" style="margin-top:20px;position:relative">
         <img class="col-xs-12 col-lg-8 col-lg-offset-3" style="box-shadow:0px 0px 8px 5px #1E2621;padding:0px;margin-bottom:40px;position:relative" src="@Url.Content("~/Picture/Weed/"+Model.WeedPhotoPath)">
-        <dl class="col-xs-12 col-lg-12 col-lg-offset-3 dl-horizontal white-word">
+        <dl class="col-xs-12 col-lg-12  dl-horizontal white-word">
             <dt>
                 Common Name
             </dt>
