--- a/PlottedAssist/Views/WeedSets/Index.cshtml
+++ b/PlottedAssist/Views/WeedSets/Index.cshtml
@@ -13,44 +13,41 @@
     <div class="row" style="background-color:#4F6657;">
 
         <!--Header-->
-        <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture4.jpg);width:100%;height:400px;position:relative;">
-            <div style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
-                <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Remove Weeds</p>
-            </div>
-            <div style="position:absolute;text-align:center;height:auto;width:auto;padding-top:255px;padding-left:50%;padding-right:33%;">
-                <p style="font-family:'Arial';color:black;background:#F5F5F5;font-size:25px;text-align:center">From my garden</p>
+        <!--Header-->
+
+        <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture4.jpg);width:100%;margin:0;padding-bottom:10%">
+            <div>
+                <img src="~/Picture/Banner/InvTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
             </div>
         </div>
-
-        
-        <h1 class="white-word" style="text-align:center;font-family:'Arial';margin-top:10px;">Have you ever see these plant</h1>
 
         <!--Filter-->
         @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
         {
-            <div style="text-align:center">
-                <div class="btn-group-lg" role="group" aria-label="Flower color">
-                    
-                    <h4 class="white-word">Flower color</h4>
+    <div style="text-align:center">
+        
+        <div class="btn-group-lg col-12 col-sm-6 col-md-12 col-lg-12" role="group" aria-label="Flower color">
+            <h1 class="white-word" style="text-align:center;font-family:'Arial';margin-top:10px;">Have You Ever Seen These Plant in Your Garden?</h1>
+            <h4 class="white-word">Flower color</h4>
 
-                    @Ajax.ActionLink("White", "WeedFilter", new { selected = "White" },
-                    new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
+            @Ajax.ActionLink("White", "WeedFilter", new { selected = "White" },
+            new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
 
-                    @Ajax.ActionLink("Yellow", "WeedFilter", new { selected = "Yellow" },
-                    new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
+            @Ajax.ActionLink("Yellow", "WeedFilter", new { selected = "Yellow" },
+            new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
 
-                    @Ajax.ActionLink("Purple", "WeedFilter", new { selected = "Purple" },
-                    new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
+            @Ajax.ActionLink("Purple", "WeedFilter", new { selected = "Purple" },
+            new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
 
-                    @Ajax.ActionLink("No flower", "WeedFilter", new { selected = "No" },
-                    new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
+            @Ajax.ActionLink("No flower", "WeedFilter", new { selected = "No" },
+            new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
 
-                    @Ajax.ActionLink("All", "WeedFilter", new { selected = "All" },
-                    new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
+            @Ajax.ActionLink("All", "WeedFilter", new { selected = "All" },
+            new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
 
-                </div>
+        </div>
 
-            </div>
+    </div>
         }
 
         @foreach (var item in Model)
