--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
         <!--Header-->
         <div class="col-12 col-md-12 col-xs-8" style="padding:0;background-image:url(../Picture/header_picture5.jpg);width:100%;margin:0;padding-bottom:10%">
-            <div class="col-lg-4 col-lg-offset-4 col-xs-4 col-xs-offset-4 white-word"  style="text-align:center;font-family:'High Tower Text';border-radius:5px;background-color:#000000;opacity:0.5;margin-top:20%">
+            <div class="col-lg-4 col-lg-offset-4 col-xs-4 col-xs-offset-4 white-word"  style="text-align:center;font-family:'High Tower Text';border-radius:5px;background-color:rgba(0,0,0,0.5);margin-top:20%">
                 <h3 style="font-size:28px">We Help Your Garden Grow.</h3><br>
                 <p style="font-size:18px">We are a non-profit organization spreading awareness of planting and caring for indigenous plants in your garden.<p>
             </div>
@@ -30,7 +30,7 @@
                     <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Look out for invasive plants in your garden. Protect your garden from them. Learn control and disposal techniques for invasive plants. See alternative indigenous plants.</h3>
                     <br> 
                     <div style="text-align:center">
-                        <button type="button" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:10%;width:100px;height:30px">@Html.ActionLink("Learn more", "../WeedSets/Index")</button>                   
+                        <a class="btn btn-success" href="@Url.Content("~/WeedSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:10%;width:100px;height:30px">Learn more</a>                   
                     </div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                     <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
                     <br>
                     <div style="text-align:center">
-                        <button type="button" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:6%;width:100px;height:30px;">@Html.ActionLink("Learn more", "../PlantSets/Index") </button>
+                        <a class="btn btn-success" href="@Url.Content("~/PlantSets/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:6%;width:100px;height:30px;">Learn more </a>
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                     <h3 style="font-size:16px;padding-left:10%;padding-right:10%">Search native local plants based on your preference. Improve your understanding of those plants before you start growing them. Select plants for your garden.</h3>
                     <br>
                     <div style="text-align:center">
-                        <button type="button" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:7%;width:100px;height:30px">@Html.ActionLink("Learn more", "../Dashboard/Index") </button>
+                        <a class="btn btn-success" href="@Url.Content("~/Dashboard/Index")" style="background: #6D917A; color:white; text-align: center;border-radius:10px;box-shadow:2px 2px 6px 2px #1E2621;border:0px;margin-bottom:12%;margin-top:7%;width:100px;height:30px">Learn more) </a>
                     </div>
                 </div>
             </div>
