--- a/PlottedAssist/Views/Dashboard/Create.cshtml
+++ b/PlottedAssist/Views/Dashboard/Create.cshtml
@@ -6,13 +6,19 @@
 }
 
 
+<!--Header-->
 
+<div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture.jpg);width:100%;margin:0;padding-bottom:10%">
+    <div>
+        <img src="~/Picture/Banner/MyGardenTitle.png" style="width:35%;margin-top:15%;margin-left:33%">
+    </div>
+</div>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal col-md-8 col-md-offset-2">
+<div class="form-horizontal col-md-8 col-md-offset-2 white-word" style="margin-top:50px;">
         <h2>Add to My Garden List</h2>
         <p>When the plant add to my garden, the frequency timer will start.</p>
         <p>Set 0 for the frequency which you do not want to use</p>
@@ -22,7 +28,7 @@
             @Html.LabelFor(model => model.PlantId, "PlantId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("PlantId", null, htmlAttributes: new { @disabled = "disabled", @class = "form-control" })
-                @Html.HiddenFor(model => model.PlantId, new { htmlAttributes = new { @class = "form-control" },Value = ViewBag.SelectId })
+                @Html.HiddenFor(model => model.PlantId, new { htmlAttributes = new { @class = "form-control" }, Value = ViewBag.SelectId })
                 @Html.ValidationMessageFor(model => model.PlantId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -73,11 +79,11 @@
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
             <div class="col-md-offset-2 col-md-10">
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+                @Html.ActionLink("Back to List", "Index")
+            </div>
         </div>
 
-        
+
     </div>
 }
 
