--- a/PlottedAssist/Views/Dashboard/Delete.cshtml
+++ b/PlottedAssist/Views/Dashboard/Delete.cshtml
@@ -4,102 +4,46 @@
     ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<!--Header-->
 
-<h2>Delete</h2>
+<div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture.jpg);width:100%;margin:0;padding-bottom:10%">
+    <div>
+        <img src="~/Picture/Banner/MyGardenTitle.png" style="width:35%;margin-top:15%;margin-left:33%">
+    </div>
+</div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>UserPlantSet</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.PlantSet.PlantCommonName)
-        </dt>
+<div class="form-horizontal col-md-8 col-md-offset-2 white-word" style="margin-top:50px;">
+    <h2>Delete</h2>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>UserPlantSet</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.PlantSet.PlantCommonName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.PlantSet.PlantCommonName)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.PlantSet.PlantCommonName)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.plantNickName)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.plantNickName)
+            </dd>
+        </dl>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.plantNickName)
-        </dt>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        <dd>
-            @Html.DisplayFor(model => model.plantNickName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PlantWaterFrq)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PlantWaterFrq)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PlantPruningFrq)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PlantPruningFrq)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PlantFertilizerFrq)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PlantFertilizerFrq)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PlantMistFrq)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PlantMistFrq)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Active)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Active)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </div>
 </div>
