--- a/PlottedAssist/Views/PlantSets/Instrction.cshtml
+++ b/PlottedAssist/Views/PlantSets/Instrction.cshtml
@@ -12,9 +12,9 @@
 
 
 
-<div style="background-image:url(../../Picture/Tooltip.jpg);padding-bottom:50%;">    
+<div style="background-image:url(../../Picture/Tooltip.jpg);padding-bottom:50%;background-repeat:no-repeat;background-size:100% 100%;">    
     <div>
-        <p style="font-size:18px;padding-top:5%">< @Html.ActionLink("Back to Questionnaire", "Index")</p>
+        <p style="font-size:18px;padding-top:5%;margin-left:1%">< @Html.ActionLink("Back to Questionnaire", "Index")</p>
     </div>
 </div>
 
