--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Invasion", "Index", "WeedSets")</li>
                     <li>@Html.ActionLink("Indigene", "Index", "PlantSets")</li>
-                    <li>@Html.ActionLink("My Gargen", "Index", "Dashboard")</li>
+                    <li>@Html.ActionLink("My Garden", "Index", "Dashboard")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
