--- a/PlottedAssist/Views/Dashboard/Delete.cshtml
+++ b/PlottedAssist/Views/Dashboard/Delete.cshtml
@@ -6,9 +6,12 @@
 }
 <!--Header-->
 
-<div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture.jpg);width:100%;margin:0;padding-bottom:10%">
+<div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
     <div>
-        <img src="~/Picture/Banner/MyGardenTitle.png" style="width:35%;margin-top:15%;margin-left:33%">
+        <img src="~/Picture/Banner/MyGardenTitle.png" style="        width: 35%;
+        margin-top: 15%;
+        margin-left: 33%
+">
     </div>
 </div>
 
