--- a/PlottedAssist/Views/Dashboard/Index.cshtml
+++ b/PlottedAssist/Views/Dashboard/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="row" style="background-color:#4F6657;">
         <!--Header-->
 
-        <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture.jpg);width:100%;margin:0;padding-bottom:10%">
+        <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
             <div>
                 <img src="~/Picture/Banner/MyGardenTitle.png" style="width:35%;margin-top:15%;margin-left:33%">
             </div>
@@ -18,7 +18,7 @@
             </div>
         
         <!--Activity part-->
-        <div class="col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2" style="margin-top:5%">
+        <div class="col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2" style="margin-top:5%;margin-bottom:10%">
 
 
             <div class="col-md-3" style="border:0px;">
@@ -58,15 +58,15 @@
             @foreach (var item in Model)
             {
                 <div class="col-md-8 col-md-offset-1 col-xs-12" style="border-radius:5px;">
-                    <div class="row" style="padding: 20px; border: thin; background: #1E2621; border-radius: 5px; box-shadow: 2px 2px 6px 2px #1E2621; margin-bottom: 40px;">
+                    <div class="col-xs-12 col-md-12 col-lg-10" style="padding: 20px; border: thin; background: #1E2621; border-radius: 5px; box-shadow: 2px 2px 6px 2px #1E2621; margin-bottom: 40px;">
                         <div class="col-xs-12 col-md-5 col-lg-5 white-word" style="border-radius:5px;box-shadow:2px 2px 6px 2px #1E2621;text-align:center">
                             <img src="@Url.Content("~/Picture/PlantSet/"+item.PlantSet.PlantPhotoPath)" style="border-radius:5px;box-shadow:0px 0px 8px 5px #1E2621;width:100%;height:100%;margin-left:-10%">                                              
                         </div>
-                        <div class="col-xs-12 col-md-7 col-lg-7 white-word" style="margin-bottom:4%;font-size:18px;font-weight:bold">
+                        <div class="col-xs-12 col-md-7 col-lg-6 col-lg-offset-1 white-word" style="margin-bottom:4%;font-size:18px;font-weight:bold">
 
                             @Html.DisplayFor(modelItem => item.plantNickName)<br>
                         </div>
-                        <div class="col-xs-12 col-md-7 col-lg-7 white-word" style="margin-bottom: 2%;font-size:18px">
+                        <div class="col-xs-12 col-md-7 col-lg-6 col-lg-offset-1 white-word" style="margin-bottom: 2%;font-size:18px">
                             <img src="~/Picture/Icon/Water.png" height="30" width="30">
                             @if (item.PlantWaterFrq == "0")
                             {<text>---</text>}
@@ -91,7 +91,7 @@
                         else
                         { @Html.DisplayFor(modelItem => item.PlantMistFrq)} days
                         </div>
-                        <div class="col-xs-12 col-md-7 col-lg-7">
+                        <div class="col-xs-12 col-md-7 col-lg-6 col-lg-offset-1">
                             <br><a href="@Url.Content("../PlantSets/Details/"+ item.PlantSet.Id)" class="btn btn-default btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;font-size:10px;width:30%">Information</a>
                             <a href="@Url.Content("~/Dashboard/Edit/"+ item.Id)" class="btn btn-default btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;width:30%;font-size:10px"> Setting</a>
                             <a href="@Url.Content("~/Dashboard/Delete/"+ item.Id)" class="btn btn-default btn-lg" style="background: #344239; color:white;padding:5px; text-align: center;border-radius:15px;border:0px;width:30%;font-size:10px"> Remove</a>
