--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -5,16 +5,16 @@
     <div class="row" style="background-color:#4F6657;">
 
         <!--Header-->
-        <div class="col-12 col-md-12 col-xs-8" style="padding:0;background-image:url(../Picture/header_picture5.jpg);width:100%;margin:0;padding-bottom:10%">
-            <div class="col-lg-4 col-lg-offset-4 col-xs-4 col-xs-offset-4 white-word"  style="text-align:center;font-family:'High Tower Text';border-radius:5px;background-color:rgba(0,0,0,0.5);margin-top:20%">
-                <h3 style="font-size:28px">We Help Your Garden Grow.</h3><br>
-                <p style="font-size:18px">We are a non-profit organization spreading awareness of planting and caring for indigenous plants in your garden.<p>
+        <div class="row" style="padding:0;background:url(../Picture/header_picture5.jpg) center;margin:0;padding-bottom:13%;background-repeat:no-repeat;background-size:100%">
+            <div class="col-lg-4 col-xs-4 col-xs-offset-4 white-word"  style="text-align:center;font-family:'Times New Roman';border-radius:5px;background-color:rgba(0,0,0,0.5);margin-top:15%;margin-left:34%">
+                <h3 style="font-size:48px">We Help Your Garden Grow.</h3><br>
+                <p style="font-size:28px">We are a non-profit organization spreading awareness of planting and caring for indigenous plants in your garden.<p>
             </div>
         </div>
 
         <!--body-->
 
-        <div class="col-md-10 col-md-offset-1 col-xs-12">
+        <div class="col-md-10 col-md-offset-1 col-xs-12" style="margin-top:0px;margin-bottom:5%">
 
             <!--Guidance-->
             <div class="col-md-3 col-md-offset-1" style="border: 0px; margin-top: 10%; ; margin-bottom: 100px ">
