--- a/PlottedAssist/Views/PlantSets/Index.cshtml
+++ b/PlottedAssist/Views/PlantSets/Index.cshtml
@@ -14,17 +14,16 @@
 <div class="row" style="background-color:#4F6657">
     <!--Header-->
 
-    <div class="col-12 col-md-12" style="padding:0;background-image:url(../Picture/header_picture3.jpg);width:100%;margin:0;padding-bottom:10%">
+    <div class="col-12 col-md-12" style="padding:0;background-image:url(../Picture/header_picture3.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
         <div>
             <img src="~/Picture/Banner/IndTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
         </div>
     </div>
 
     <!--Question part-->
-    <form role="form" action="/PlantSets/TestResult" method="post" class="col-sm-6 col-sm-offset-3 white-word" style="font-family: 'Arial';
+    <form role="form" action="/PlantSets/TestResult" method="post" class="col-sm-6 col-sm-offset-3 white-word" style="        font-family: 'Arial';
         background: #344239;
         margin-top: 5%;
-        
         margin-bottom: 5%">
         <div class="white-word" style="background:#344239;text-align:center;margin-top:10%;">
             <H3>Let us help you decide which to plant!</H3>
