--- a/PlottedAssist/Views/PlantSets/PlantList.cshtml
+++ b/PlottedAssist/Views/PlantSets/PlantList.cshtml
@@ -13,7 +13,7 @@
 
     <!--Header-->
 
-    <div class="col-12 col-md-12" style="padding:0;background-image:url(../Picture/header_picture3.jpg);width:100%;margin:0;padding-bottom:10%">
+    <div class="col-12 col-md-12" style="padding:0;background-image:url(../Picture/header_picture3.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
         <div>
             <img src="~/Picture/Banner/IndTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
         </div>
@@ -22,7 +22,7 @@
     <!--Filter-->
     @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
     {
-        <div class="col-12 col-sm-6 col-md-12 col-lg-12" style="text-align:center;margin-top:20px;position:relative">
+        <div class="col-12 col-sm-6 col-md-12 col-lg-12" style="text-align: center; margin-top: 20px; position: relative">
             <div class="btn-group-lg" role="group" aria-label="..." style="margin-top:20px;position:relative">
                 <h4 class="white-word">Plant type</h4>
 
@@ -68,7 +68,7 @@
     @foreach (var item in Model)
     {
         <!--Plant display-->
-        <div class="col-12 col-sm-3 col-md-3 col-lg-3 col-lg-offset-1">
+        <div class="col-12 col-sm-3 col-md-3 col-lg-3 col-lg-offset-1" style="margin-bottom:5%">
             <div class="card" style="padding:25px;width:280px;margin-top:20px;border-radius:15px;">
                 <a href="@Url.Content("~/PlantSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;padding:0px;margin:0px">
                     <img src="@Url.Content("~/Picture/PlantSet/"+item.PlantPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;margin:0px">
