--- a/PlottedAssist/Views/PlantSets/TestResult.cshtml
+++ b/PlottedAssist/Views/PlantSets/TestResult.cshtml
@@ -5,35 +5,32 @@
     Layout = "~/Views/Shared/_Layout.cshtml";  
 }
 
-<div class="row" style="background-color:#344239">
+    <div class="row" style="background-color:#344239">
 
-    <!--Header-->
+        <!--Header-->
 
-    <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;padding:0">
-        <div class="col-12 col-md-12" style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
-            <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Indigenous Plants</p>
-        </div>
-        <div class="col-12 col-md-12" style="position:absolute;text-align:center;height:auto;width:auto;padding-top:255px;padding-left:50%;padding-right:33%;">
-            <p style="font-family:'Arial';color:black;background:#F5F5F5;font-size:25px;text-align:center">in Yarra City</p>
-        </div>
-    </div>
-    ===================<br>
-    @ViewBag.result<br>
-    ===================
-    @foreach (var item in Model)
-    {
-        <!--Plant display-->
-        <div class="col-12 col-sm-6 col-md-4 col-lg-4">
-            <div class="card" style="padding:25px;width:280px;margin-top:20px;border-radius:15px;">
-                <a href="@Url.Content("~/PlantSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;padding:0px;margin:0px">
-                    <img src="@Url.Content("~/Picture/PlantSet/"+item.PlantPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;margin:0px">
-                   <div style="position:relative;margin-top:-40%"> 
-                        <h1 class="white-word" style="font-size:16px">@Html.DisplayFor(modelItem => item.PlantCommonName)</h1>
-                        <h1 class="white-word" style="font-size:16px">@Html.DisplayFor(modelItem => item.PlantSciName)</h1>
-                   </div>
-                </a>
+        <div class="col-12 col-md-12" style="padding:0;background-image:url(../Picture/header_picture3.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
+            <div>
+                <img src="~/Picture/Banner/IndTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
             </div>
-
         </div>
-    }
-</div>        
+        ===================<br>
+        @ViewBag.result<br>
+        ===================
+        @foreach (var item in Model)
+        {
+            <!--Plant display-->
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+                <div class="card" style="padding:25px;width:280px;margin-top:20px;border-radius:15px;">
+                    <a href="@Url.Content("~/PlantSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;padding:0px;margin:0px">
+                        <img src="@Url.Content("~/Picture/PlantSet/"+item.PlantPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;margin:0px">
+                        <div style="position:relative;margin-top:-40%">
+                            <h1 class="white-word" style="font-size:16px">@Html.DisplayFor(modelItem => item.PlantCommonName)</h1>
+                            <h1 class="white-word" style="font-size:16px">@Html.DisplayFor(modelItem => item.PlantSciName)</h1>
+                        </div>
+                    </a>
+                </div>
+
+            </div>
+        }
+    </div>        
