--- a/PlottedAssist/Views/WeedSets/Details.cshtml
+++ b/PlottedAssist/Views/WeedSets/Details.cshtml
@@ -9,14 +9,14 @@
 
     <!--Header-->
 
-    <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture4.jpg);width:100%;margin:0;padding-bottom:10%">
+    <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture4.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
         <div>
             <img src="~/Picture/Banner/InvTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
         </div>
     </div>
     <!--weed information and picture-->
     <p style="color:black;font-family:'Arial';font-size:16PX;padding-left:10%">< @Html.ActionLink("Back to List", "Index")</p>
-    <div class="col-xs-8 col-sm-6 col-sm-offset-3 col-xs-offset-2" style="margin-top:20px;position:relative">
+    <div class="col-xs-8 col-sm-6 col-sm-offset-3 col-xs-offset-2" style="margin-top:5%;position:relative;margin-bottom:5%">
         <img class="col-xs-12 col-lg-8 col-lg-offset-3" style="box-shadow:0px 0px 8px 5px #1E2621;padding:0px;margin-bottom:40px;position:relative" src="@Url.Content("~/Picture/Weed/"+Model.WeedPhotoPath)">
         <dl class="col-xs-12 col-lg-12  dl-horizontal white-word">
             <dt>
