--- a/PlottedAssist/Views/WeedSets/Index.cshtml
+++ b/PlottedAssist/Views/WeedSets/Index.cshtml
@@ -12,10 +12,10 @@
 
     <div class="row" style="background-color:#4F6657;">
 
-        <!--Header-->
+        
         <!--Header-->
 
-        <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture4.jpg);width:100%;margin:0;padding-bottom:10%">
+        <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture4.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
             <div>
                 <img src="~/Picture/Banner/InvTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
             </div>
@@ -24,7 +24,7 @@
         <!--Filter-->
         @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
         {
-    <div style="text-align:center">
+    <div style="text-align:center;">
         
         <div class="btn-group-lg col-12 col-sm-6 col-md-12 col-lg-12" role="group" aria-label="Flower color">
             <h1 class="white-word" style="text-align:center;font-family:'Arial';margin-top:10px;">Have You Ever Seen These Plant in Your Garden?</h1>
@@ -54,7 +54,7 @@
         {
             <!--Weed display-->
 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="padding-left:60px">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-lg-offset-1" style="margin-bottom:5%">
                 <div class="card" style="padding:15px;width:200px;margin-top:20px;border-radius:15px;">
                     <a href="@Url.Content("~/WeedSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;box-shadow:2px 2px 6px 2px #1E2621;padding:0px;">
                         <img src="@Url.Content("~/Picture/Weed/"+item.WeedPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;">
