--- a/PlottedAssist/Views/WeedSets/WeedFilter.cshtml
+++ b/PlottedAssist/Views/WeedSets/WeedFilter.cshtml
@@ -9,57 +9,54 @@
     };
 }
 
-<!--Header-->>
-    <div class="col-12 col-md-8" style="background-image:url(../Picture/header_picture.jpg);width:100%;height:400px;position:relative;">
-        <div style="position:absolute;text-align:center;height:auto;width:auto;padding-top:200px;padding-left:35%;padding-right:35%">
-            <p style="font-family:'Arial';color:white;background:black;font-size:45px;text-align:center">Remove Weeds</p>
-        </div>
-        <div style="position:absolute;text-align:center;height:auto;width:auto;padding-top:255px;padding-left:50%;padding-right:33%;">
-            <p style="font-family:'Arial';color:black;background:#F5F5F5;font-size:25px;text-align:center">From my garden</p>
+
+<div class="row" style="padding:50px;background-color:#344239;">
+
+    <!--Header-->>
+
+
+    <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture4.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
+        <div>
+            <img src="~/Picture/Banner/InvTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
         </div>
     </div>
 
+    <h1 class="white-word" style="text-align:center;font-family:'Arial';padding-top:10px;">Have you ever see these plant</h1>
 
-    <div class="row" style="padding:50px;background-color:#344239;">
+    @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
+    {
+        <div style="text-align:center;">
+            <div class="btn-group-lg" role="group" aria-label="Flower color">
+                <h4 class="white-word">Flower color</h4>
 
+                @Ajax.ActionLink("White", "WeedFilter", new { selected = "White" },
+                new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
 
+                @Ajax.ActionLink("Yellow", "WeedFilter", new { selected = "Yellow" },
+                new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
 
-        <h1 class="white-word" style="text-align:center;font-family:'Arial';padding-top:10px;">Have you ever see these plant</h1>
+                @Ajax.ActionLink("Purple", "WeedFilter", new { selected = "Purple" },
+                new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
 
-        @using (Ajax.BeginForm("GetPlantData", ajaxOpts))
-        {
-            <div style="text-align:center">
-                <div class="btn-group-lg" role="group" aria-label="Flower color" >
-                    <h4 class="white-word">Flower color</h4>
-                    
-                        @Ajax.ActionLink("White", "WeedFilter", new { selected = "White" },
-                        new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
-                              
-                        @Ajax.ActionLink("Yellow", "WeedFilter", new { selected = "Yellow" },
-                        new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
-                
-                        @Ajax.ActionLink("Purple", "WeedFilter", new { selected = "Purple" },
-                        new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
-                
-                        @Ajax.ActionLink("No flower", "WeedFilter", new { selected = "No" },
-                        new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
-                    
-                        @Ajax.ActionLink("All", "WeedFilter", new { selected = "All" },
-                        new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
-                    
-                </div>
+                @Ajax.ActionLink("No flower", "WeedFilter", new { selected = "No" },
+                new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
+
+                @Ajax.ActionLink("All", "WeedFilter", new { selected = "All" },
+                new AjaxOptions { UpdateTargetId = "tableBody" }, new { @class = "btn btn-success", @type = "button" })
+
             </div>
-        }
-        @foreach (var item in Model)
-        {
-            <!--Weed display-->
+        </div>
+    }
+    @foreach (var item in Model)
+    {
+        <!--Weed display-->
 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="padding-left:60px">
-                <div class="card" style="padding:15px;width:200px;margin-top:20px;border-radius:15px;">
-                    <a href="@Url.Content("~/WeedSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;padding:0px;">
-                        <img src="@Url.Content("~/Picture/Weed/"+item.WeedPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;">
-                    </a>
-                </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-lg-offset-1" style="margin-bottom:5%">
+            <div class="card" style="padding:15px;width:200px;margin-top:20px;border-radius:15px;">
+                <a href="@Url.Content("~/WeedSets/Details/"+ item.Id)" class="thumbnail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;padding:0px;">
+                    <img src="@Url.Content("~/Picture/Weed/"+item.WeedPhotoPath)" alt="Show detail" style="border-radius:15px;box-shadow:0px 0px 8px 5px #1E2621;">
+                </a>
             </div>
-        }
-    </div>
+        </div>
+    }
+</div>
