Change some content text

--- a/PlottedAssist/Views/PlantSets/Details.cshtml
+++ b/PlottedAssist/Views/PlantSets/Details.cshtml
@@ -107,7 +107,7 @@
             </dt>
 
             <dd>
-                <P>@Html.DisplayFor(model => model.PlantWaterFrq)</P>
+                <P>Every @Html.DisplayFor(model => model.PlantWaterFrq) Days</P>
             </dd>
 
             <dt>
@@ -115,7 +115,7 @@
             </dt>
 
             <dd>
-                <P>@Html.DisplayFor(model => model.PlantPruningFrq)</P>
+                <P>Every @Html.DisplayFor(model => model.PlantPruningFrq) Days</P>
             </dd>
 
             <dt>
@@ -123,7 +123,7 @@
             </dt>
 
             <dd>
-                <P>@Html.DisplayFor(model => model.PlantFertilizerFrq)</P>
+                <P>Every @Html.DisplayFor(model => model.PlantFertilizerFrq) Days</P>
             </dd>
 
             <dt>
@@ -131,7 +131,7 @@
             </dt>
 
             <dd>
-                <P>@Html.DisplayFor(model => model.PlantMistFrq)</P>
+                <P>Every @Html.DisplayFor(model => model.PlantMistFrq) Days</P>
             </dd>
 
             <dt>
