--- a/PlottedAssist/Views/Dashboard/Index.cshtml
+++ b/PlottedAssist/Views/Dashboard/Index.cshtml
@@ -69,25 +69,25 @@
                         <div class="col-xs-12 col-md-7 col-lg-6 col-lg-offset-1 white-word" style="margin-bottom: 2%;font-size:18px">
                             <img src="~/Picture/Icon/Water.png" height="30" width="30">
                             @if (item.PlantWaterFrq == "0")
-                            {<text>---</text>}
+                            {<text> - </text>}
                         else
                         { @Html.DisplayFor(modelItem => item.PlantWaterFrq)} days
 
                             <img src="~/Picture/Icon/Prune.png" height="30" width="30">
                             @if (item.PlantPruningFrq == "0")
-                            {<text>---</text>}
+                            {<text> - </text>}
                         else
                         { @Html.DisplayFor(modelItem => item.PlantPruningFrq)} days
                             <br><br>
                             <img src="~/Picture/Icon/Fertilize.png" height="30" width="30">
                             @if (item.PlantPruningFrq == "0")
-                            {<text>---</text>}
+                            {<text> - </text>}
                         else
                         {@Html.DisplayFor(modelItem => item.PlantFertilizerFrq)} days
 
                             <img src="~/Picture/Icon/Mist.png" height="30" width="30">
                             @if (item.PlantPruningFrq == "0")
-                            {<text>---</text>}
+                            {<text> - </text>}
                         else
                         { @Html.DisplayFor(modelItem => item.PlantMistFrq)} days
                         </div>
