Fix the dashboard bug

--- a/PlottedAssist/Views/Home/Index.cshtml
+++ b/PlottedAssist/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
         <div class="col-md-10 col-md-offset-1 col-xs-12" style="margin-top:0px;margin-bottom:5%">
 
             <!--Guidance-->
-            <div class="col-md-3 col-md-offset-1" style="border: 0px; margin-top: 10%; ; margin-bottom: 100px ">
+            <div class="col-md-3 col-md-offset-1" style="border: 0px; margin-top: 10%;margin-bottom: 100px ">
                 <div class="white-word" style="background:#1E2621;border:0px;border-radius:10px;">
                     <br>
                     <div style="text-align:center">
