--- a/PlottedAssist/Views/PlantSets/Details.cshtml
+++ b/PlottedAssist/Views/PlantSets/Details.cshtml
@@ -16,13 +16,12 @@
     </div>
 
     <!--Plant information and picture-->
-    <br>
-    <br>
-    <div style="color:black;font-family:'Arial';font-size:16PX;padding-left:15%;margin-top:3%">
-        <p>< @Html.ActionLink("Back to List", "Index")</p>
+    
+    <div class="col-sm-3" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
+        <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a> 
     </div>
     
-    <div class="col-sm-6 col-sm-offset-3" style="margin-top:5%;margin-bottom:10%">
+    <div class="col-sm-6" style="margin-top:5%; margin-bottom:10%;">
         <img class="col-xs-8 col-lg-8 col-lg-offset-2 col-xs-offset-2" style="box-shadow:0px 0px 8px 5px #1E2621;padding:0px;margin-bottom:20px" src="@Url.Content("~/Picture/PlantSet/"+Model.PlantPhotoPath)">
         <!--Add plant button-->
         <div class="col-xs-8 col-lg-8 col-lg-offset-2 col-xs-offset-2" style="text-align: center; font-family: 'Arial';margin-top:5%;margin-bottom:5%">
@@ -31,7 +30,7 @@
         
         <dl class="col-xs-12 col-lg-12 dl-horizontal white-word">
             <dt>
-                <P>Common Name</P>
+                Common Name
             </dt>
 
             <dd>
@@ -39,7 +38,7 @@
             </dd>
 
             <dt>
-                <P>Scientific Name</P>
+                Scientific Name
             </dt>
 
             <dd>
@@ -47,7 +46,7 @@
             </dd>
 
             <dt>
-                <P>Type</P>
+                Type
             </dt>
 
             <dd>
@@ -55,7 +54,7 @@
             </dd>
 
             <dt>
-                <P>Description</P>
+                Description
             </dt>
 
             <dd>
@@ -63,7 +62,7 @@
             </dd>
 
             <dt>
-                <P>Plant Season</P>
+                Plant Season
             </dt>
 
             <dd>
@@ -80,7 +79,7 @@
             </dd>
 
             <dt>
-                <P>Flower Color</P>
+                Flower Color
             </dt>
 
             <dd>
@@ -88,7 +87,7 @@
             </dd>
 
             <dt>
-                <P>Sun need</P>
+                Sun need
             </dt>
 
             <dd>
@@ -103,7 +102,7 @@
             </dd>
 
             <dt>
-                <P>Water Frequency</P>
+                Water Frequency
             </dt>
 
             <dd>
@@ -111,7 +110,7 @@
             </dd>
 
             <dt>
-                <P>Purning Frequency</P>
+                Purning Frequency
             </dt>
 
             <dd>
@@ -119,7 +118,7 @@
             </dd>
 
             <dt>
-                <P>Fertilizer Frequency</P>
+                Fertilizer Frequency
             </dt>
 
             <dd>
@@ -127,7 +126,7 @@
             </dd>
 
             <dt>
-                <P>Mist Frequency</P>
+                Mist Frequency
             </dt>
 
             <dd>
@@ -135,7 +134,7 @@
             </dd>
 
             <dt>
-                <P>Soil Type</P>
+                Soil Type
             </dt>
 
             <dd>
@@ -150,7 +149,7 @@
             </dd>
 
             <dt>
-                <P>Provide Habit</P>
+                Provide Habit
             </dt>
 
             <dd>
@@ -158,7 +157,7 @@
             </dd>
 
             <dt>
-                <P>Drought Telorant</P>
+                Drought Telorant
             </dt>
 
             <dd>
@@ -171,7 +170,7 @@
             </dd>
 
             <dt>
-                <P>Companion Plant</P>
+                Companion Plant
             </dt>
 
             <dd>
@@ -179,7 +178,7 @@
             </dd>
 
             <dt>
-                <P>Attract Animal</P>
+                Attract Animal
             </dt>
 
             <dd>
