--- a/PlottedAssist/Views/Shared/_Layout.cshtml
+++ b/PlottedAssist/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
     </div>
     <footer style="background-color:black;">
         <br>
-        <p style="text-align:center;">&copy; @DateTime.Now.Year - Plotted Assist</p>
+        <p style="text-align:center;">&copy; @DateTime.Now.Year - Plotted Plant</p>
         <br>
     </footer>
     
