--- a/PlottedAssist/Views/WeedSets/Details.cshtml
+++ b/PlottedAssist/Views/WeedSets/Details.cshtml
@@ -5,68 +5,70 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="background-color:#4F6657;">
+    <div class="row" style="background-color:#4F6657;">
 
-    <!--Header-->
+        <!--Header-->
 
-    <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture4.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
-        <div>
-            <img src="~/Picture/Banner/InvTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
+        <div class="col-12 col-md-12" style="padding:0;background-image:url(../../Picture/header_picture4.jpg);width:100%;margin:0;padding-bottom:10%;background-repeat:no-repeat;background-size:100%">
+            <div>
+                <img src="~/Picture/Banner/InvTitleWeb.png" style="width:35%;margin-top:15%;margin-left:33%">
+            </div>
+        </div>
+        <!--weed information and picture-->
+        <div class="col-sm-3 col-xs-2" style="color:black;font-family:'Arial';font-size:16PX;padding-left:20%;margin-top:5%">
+            <a class="btn btn-success" name="Submit" onclick="javascript:history.back(1)"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>back</a>
+        </div>
+        <div class="col-xs-8 col-sm-6" style="margin-top:5%;position:relative;margin-bottom:5%">
+            <img class="col-xs-12 col-lg-8 col-lg-offset-3" style="box-shadow:0px 0px 8px 5px #1E2621;padding:0px;margin-bottom:40px;position:relative" src="@Url.Content("~/Picture/Weed/"+Model.WeedPhotoPath)">
+            <dl class="col-xs-12 col-lg-12  dl-horizontal white-word">
+                <dt>
+                    Common Name
+                </dt>
+
+                <dd>
+                    <p>@Html.DisplayFor(model => model.WeedCommonName)</p>
+                </dd>
+
+                <dt>
+                    Scientific Name
+                </dt>
+
+                <dd>
+                    <p>@Html.DisplayFor(model => model.WeedSciName)</p>
+                </dd>
+
+                <dt>
+                    Description
+                </dt>
+
+                <dd>
+                    <p>@Html.DisplayFor(model => model.WeedDesc)</p>
+                </dd>
+
+                <dt>
+                    Flower Color
+                </dt>
+
+                <dd>
+                    <p>@Html.DisplayFor(model => model.WeedFlowerColor)</p>
+                </dd>
+
+                <dt>
+                    Weed Control
+                </dt>
+
+                <dd>
+                    <p>@Html.DisplayFor(model => model.WeedControl)</p>
+                </dd>
+
+                <dt>
+                    Replace Indigene
+                </dt>
+
+                <dd>
+                    <p><a href="@Url.Content("~/PlantSets/Details/" + Model.PlantSet.Id)"> @Html.DisplayFor(model => model.PlantSet.PlantCommonName)</a></p>
+                </dd>
+
+            </dl>
         </div>
     </div>
-    <!--weed information and picture-->
-    <p style="color:black;font-family:'Arial';font-size:16PX;padding-left:10%">< @Html.ActionLink("Back to List", "Index")</p>
-    <div class="col-xs-8 col-sm-6 col-sm-offset-3 col-xs-offset-2" style="margin-top:5%;position:relative;margin-bottom:5%">
-        <img class="col-xs-12 col-lg-8 col-lg-offset-3" style="box-shadow:0px 0px 8px 5px #1E2621;padding:0px;margin-bottom:40px;position:relative" src="@Url.Content("~/Picture/Weed/"+Model.WeedPhotoPath)">
-        <dl class="col-xs-12 col-lg-12  dl-horizontal white-word">
-            <dt>
-                Common Name
-            </dt>
-
-            <dd>
-                <p>@Html.DisplayFor(model => model.WeedCommonName)</p>
-            </dd>
-
-            <dt>
-                Scientific Name
-            </dt>
-
-            <dd>
-                <p>@Html.DisplayFor(model => model.WeedSciName)</p>
-            </dd>
-
-            <dt>
-                Description
-            </dt>
-
-            <dd>
-                <p>@Html.DisplayFor(model => model.WeedDesc)</p>
-            </dd>
-
-            <dt>
-                Flower Color
-            </dt>
-
-            <dd>
-                <p>@Html.DisplayFor(model => model.WeedFlowerColor)</p>
-            </dd>
-
-            <dt>
-                Weed Control
-            </dt>
-
-            <dd>
-                <p>@Html.DisplayFor(model => model.WeedControl)</p>
-            </dd>
-
-            <dt>
-                Replace Indigene
-            </dt>
-
-            <dd>
-                <p><a href="@Url.Content("~/PlantSets/Details/" + Model.PlantSet.Id)"> @Html.DisplayFor(model => model.PlantSet.PlantCommonName)</a></p>
-            </dd>
-
-        </dl>
-    </div>
-</div>
